<resources>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="No">NO</string>

    <string name="broadcast_device">Broadcast Device</string>

    <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device.</string>

    <string name="refresh">Refresh</string>
    <string name="start_error_prefix">Start Advertising failed: </string>
    <string name="start_error_already_started">already started.</string>
    <string name="start_error_too_large">data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">not supported on this device.</string>
    <string name="start_error_internal">internal error.</string>
    <string name="start_error_too_many">too many advertisers.</string>
    <string name="bt_null">Error: Bluetooth object null</string>
    <string name="last_seen">Last Seen:</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minute ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="empty_list">No devices found - refresh to try again.</string>
    <string name="seconds">seconds.</string>
    <string name="scan_start_toast">Scanning for</string>
    <string name="already_scanning">Scanning already started.</string>
    <string name="no_name">(no name)</string>
    <string name="start_error_unknown">unknown error</string>
    <string name="advertising_timedout">Advertising stopped due to timeout.</string>
    <string name="bt_notif_title">Advertising device via Bluetooth</string>
    <string name="bt_notif_txt">Bluetooth Notif Desc</string>
    <string name="title_login_module">Module Title</string>
    <string name="title_dashboard_module">Dashboard Module</string>

    <string name="eye_beacon">Eye Beacon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="greeting">Hello,</string>
    <string name="position">position</string>
    <string name="uuid">UUID</string>
    <string name="sample_uuid">00002a37&#8211;0000&#8211;1000&#8211;8000&#8211;00805f9b34fb</string>
    <string name="room_title">You\'re in</string>
    <string name="sample_room">A344</string>
    <string name="sample_number_room">5</string>
    <string name="sample_date">17-August-2021</string>
    <string name="sample_time">09:00 PM</string>
    <string name="sample_item_room_description">You\'re entered in A344</string>
    <string name="title_feature_sample">Feature Sample</string>
    <string name="DASHBOARD_stop_advertising">Stop Advertising</string>
</resources>