<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundFloating"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_dashboard"
        style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_dashboard_id"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:cardCornerRadius="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_dashboard_greeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/greeting"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_dashboard_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:text="@string/username"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/card_dashboard_detail_room"
                app:layout_constraintStart_toStartOf="@+id/tv_dashboard_greeting"
                app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_greeting" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_dashboard_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_dashboard_name"
                app:layout_constraintStart_toStartOf="@+id/tv_dashboard_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_name" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_dashboard_detail_room"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="?attr/colorPrimaryVariant"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_dashboard_position"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_dashboard_greeting">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_dashboard_room_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/room_title"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_dashboard_room_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sample_room"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/iv_dashboard_room"
                        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_room_title" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_dashboard_room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:src="@drawable/ic_baseline_groups_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline_dashboard_room" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_dashboard_room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_dashboard_number_person_in_room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/sample_number_room"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_dashboard_room"
                        app:layout_constraintStart_toEndOf="@+id/guideline_dashboard_room"
                        app:layout_constraintTop_toTopOf="@+id/iv_dashboard_room" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textlayout_dashboard_uuid"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:expandedHintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dashboard_position">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_dashboard_uuid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/uuid"
                    android:inputType="text"
                    android:padding="16dp"
                    android:text="@string/sample_uuid"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dashboard_start_stop_advertising"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/DASHBOARD_stop_advertising"
                app:layout_constraintTop_toBottomOf="@+id/textlayout_dashboard_uuid" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dashboard_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layoutAnimation="@anim/layout_animation"
        tools:listitem="@layout/item_dashboard_detail" />

</LinearLayout>